--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -6,10 +6,10 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css?v=9">
+	<link rel="stylesheet" href="globalstyle.css?v=10">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
-	<link rel="stylesheet" href="menustyle.css?v=9">
-	<link rel="stylesheet" href="about.css?v=9">
+	<link rel="stylesheet" href="menustyle.css?v=10">
+	<link rel="stylesheet" href="about.css?v=10">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
@@ -193,6 +193,7 @@
 				- Fikset en feil med antall mulige desimaler.<br>
 				- Fikset flere småfeil med custom mode.<br>
 				- Takk for alle tilbakemeldingene! Jeg leser alle jeg får!<br>
+				- Fikset at Alolan Ninetales heter Alolan Rapidash i spillet. (Hvis du har denne pokemonen fra før, vil feilen bli værende.)<br>
 				<p>20.09.2022</p>
 				- Fikset en feil som gjorde at man ikke kunne få pokemon i custom mode.<br>
 				<p>19.09.2022</p>
@@ -398,7 +399,7 @@
 </div>
 
 	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="global.js?v=9"></script>
+	  <script src="global.js?v=10"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
 </body>
 <!-- https://icon-icons.com/users/RoundIcons/icon-sets/ Ikoner laget av RoundIcons 
