--- a/MathGame/stats.html
+++ b/MathGame/stats.html
@@ -5,10 +5,9 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css??v=10">
+	<link rel="stylesheet" href="globalstyle.css??v=9">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
-	<link rel="stylesheet" href="menustyle.css??v=10">
-	<link rel="stylesheet" href="customizer.css??v=10">
+	<link rel="stylesheet" href="menustyle.css??v=9">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
@@ -119,103 +118,24 @@
 		</form>
 	  </div>
 <div class="main">
-	<div class="columns is-mobile is-multiline">
-	<form class="customizerform" >
-		<div class="toggle-pill-color">
-			<a class="categoryname"> Addisjon</a>	
-			<input type="checkbox" id="additioncheck" name="add">
-			<label for="additioncheck">  </label>
-		</div>
-
-		<div class="form-group col-md-6" id="addSection" style="display: none;">
-			<label for="first"> Laveste ledd: </label>
-			<input type="number" value="0" id="addMinSel" required autocomplete="off">
-			
-			<label for="first"> Høyeste ledd: </label>
-			<input type="number" value="100" id="addMaxSel" required autocomplete="off">
-			
-			<label for="quantity"> Desimaler (0-5): </label>
-			<input type="number" value="0" id="addDecSel" min="0" max="5" required autocomplete="off">
-		</div>
-
-		<div class="toggle-pill-color">
-			<a class="categoryname"> Subtraksjon</a>	
-			<input type="checkbox" id="subtractioncheck" name="sub">
-			<label for="subtractioncheck">  </label>
-		</div>
-		<div class="form-group col-md-6" id="subSection" style="display: none;">
-			<label for="first">Laveste ledd:</label>
-			<input type="number" id="subMinSel" value="0" class="form-control" required autocomplete="off">
-
-			<label for="first">Høyeste ledd:</label>
-			<input type="number" id="subMaxSel" value="100" class="form-control" required autocomplete="off">
-
-			<label for="quantity"> Desimaler (0-5): </label>
-			<input type="number" id="subDecSel" value="0" id="subDec" min="0" max="5" required autocomplete="off">
-
-			<a>Tillat negative differenser:</a>
-			<div class="toggle-pill-color">
-				<input type="checkbox" id="subtractionallownegative" name="san">
-				<label for="subtractionallownegative">  </label>
-			</div>
-		</div>
-
-		<div class="toggle-pill-color">
-			<a class="categoryname"> Multiplikasjon</a>	
-			<input type="checkbox" id="multiplicationcheck" name="mul">
-			<label for="multiplicationcheck">  </label>
-		</div>
-		<div class="form-group col-md-6" id="mulSection" style="display: none;">
-			<label for="first">Laveste faktor:</label>
-			<input type="number" id="mulMinSel" value="0" class="form-control" required autocomplete="off">
-			
-			<label for="first">Høyeste faktor:</label>
-			<input type="number" id="mulMaxSel" value="10" class="form-control" required autocomplete="off">
-
-			<label for="quantity"> Desimaler (0-5): </label>
-			<input type="number" value="0" id="mulDecSel" min="0" max="5" required autocomplete="off">
-		</div>
-
-		<div class="toggle-pill-color">
-			<a class="categoryname"> Divisjon</a>	
-			<input type="checkbox" id="divisioncheck" name="div">
-			<label for="divisioncheck">  </label>
-		</div>
-		<div class="form-group col-md-6" id="divSection" style="display: none;">
-			<label for="first">Laveste divisor: </label>
-			<input type="number" id="divMinDivSel" value="1" class="form-control" required autocomplete="off">
-			
-			<label for="first">Høyeste divisor: </label>
-			<input type="number" id="divMaxDivSel" id="divMaxDiv" value="10" class="form-control" required autocomplete="off">
-
-			<label for="first">Laveste kvotient: </label>
-			<input type="number" id="divMinKvoSel" value="0" class="form-control" required autocomplete="off">
-			
-			<label for="first">Høyeste kvotient: </label>
-			<input type="number" id="divMaxKvoSel" value="10" class="form-control" required autocomplete="off">
-
-			<label for="quantity"> Desimaler (0-5): </label>
-			<input type="number" value="0" id="divDecSel" min="0" max="5" required autocomplete="off">
-		</div>
-		<button class="button-1" id="useform" onClick="handleUse()" type="button"> Bruk </button> 
-		<button class="button-1" id="copyform"onClick="handleCopy()" type="button"> Kopier </button>
-		<button class="button-1" id="qrcreate"onClick="generateBarCode()" type="button" > Lag QR-Kode </button>
-		<div>
-		<img class="barcode" id='barcode' src="https://api.qrserver.com/v1/create-qr-code/?data=Pokemath.online&amp;size=250x250" alt="" title="QR Kode" width="250" height="250" style="display: none;"/>
-		</div>
-	</form>
-	
-</div>
-	
-
+	<div>
+		<a id="visits">...</a>
+		<script>
+			function cb(response) {
+				document.getElementById('visits').innerText = response.value;
+			}
+		</script>
+		<script async src="https://api.countapi.xyz/info/pokemath.online/visits?callback=cb"></script>
+		<button onClick="call()">Test</button>
+	</div>
 </div>
 
 <div class="botbar">
 	<a id="update-log" class="align-right" href="about.html#news">Nytt</a>
 </div>
 
-<script src="global.js?v=10"></script>
-<script src="customizer.js?v=10"></script>
+<script src="global.js?v=9"></script>
+<script src="stats.js?v=9"></script>
 </body>
 
 </html>
