--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -6,10 +6,10 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css?v=10">
+	<link rel="stylesheet" href="globalstyle.css?v=11">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
-	<link rel="stylesheet" href="menustyle.css?v=10">
-	<link rel="stylesheet" href="about.css?v=10">
+	<link rel="stylesheet" href="menustyle.css?v=11">
+	<link rel="stylesheet" href="about.css?v=11">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
@@ -159,7 +159,9 @@
 			<h2 class="section-title">Kontakt</h1>
 			<p>
 				Kontaktinformasjon:<br>
-				Mail: tirco@tirco.tv (marker meldingen med pokemath)<br><br><br>
+				Mail: tirco@tirco.tv (marker meldingen med pokemath)<br><br>
+				Du kan også legge igjen en feilmelding på <a href="https://forms.gle/Vi1VZ37R3UwfSpbu9">denne lenken</a> (Google Forms),<br>
+				eller en generel tilbakemelding på <a href="https://forms.gle/KJo37sLgL9St4m2D6">denne lenken</a> (Google Forms).
 				<div id="donate-button-container">
 					Hvis du ønsker å sponse meg en godbit eller tilsvarende for arbeidet lagt inn i siden, så kan du legge inn en donasjon her: 	
 					<div id="donate-button"></div>
@@ -186,6 +188,13 @@
 		</div>
 		<article class="content">
 			<h2 class="section-title">Nyheter</h1>
+				<p>??.10.2022</p>
+				- Forbedret måten pokemon lagres og lastes inn på, slik at belastningen på spillet blir mindre.
+				<p>03.10.2022</p>
+				- Hotfixet Halloween eventet:<br>
+				- Shadow MewTwo har nå riktig bilde. (OG det oppdaterer seg til riktg, etterhvert) Denne typen fix vil snart være på plass for alle de buggede pokemonene, når jeg omarbeider hvordan de lastes inn. (Så om du har Alolan "Rapidash" så blir dette fikset snart-ish)<br>
+				- Fjernet muligheten for juksing ved å laste inn på nytt. (Dette var en bugg ved innlastning)<br>
+				- Takk for alle tilbakemeldinger og feilmeldinger!<br>
 				<p>24.09.2022</p>
 				- Gjorde klar for Halloween! Gjennom hele oktober kan man fange 18 spesielle pokemon ved å bruke egget som dukker opp på regnesiden. Man kan også få ekstra mange dark og ghost-pokemon!<br>
 				- Fikset småfeil på pokedexen.<br>
@@ -399,7 +408,7 @@
 </div>
 
 	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="global.js?v=10"></script>
+	  <script src="global.js?v=11"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
 </body>
 <!-- https://icon-icons.com/users/RoundIcons/icon-sets/ Ikoner laget av RoundIcons 
