--- a/MathGame/stats.html
+++ b/MathGame/stats.html
@@ -127,6 +127,8 @@
 		</script>
 		<script async src="https://api.countapi.xyz/info/pokemath.online/visits?callback=cb"></script>
 		<button onClick="call()">Test</button>
+		<a id="btnClicks">...</a><br>
+		<a>Unique: </a><a id="uniCount">...</a>
 	</div>
 </div>
 
