optimization and statistics

--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -5,11 +5,16 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css?v=11">
+	<title>Pokémath - Om oss</title>
+	<meta name="title" content="Pokémath - Om oss">
+	<meta name="description" content="Om siden til Pokémath, med kontaktinformasjon og lignende.">
+	<meta name="robots" content="noindex, nofollow">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="author" content="Tirco">
+	<link rel="stylesheet" href="globalstyle.css?v=21">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
-	<link rel="stylesheet" href="menustyle.css?v=11">
-	<link rel="stylesheet" href="about.css?v=11">
+	<link rel="stylesheet" href="menustyle.css?v=21">
+	<link rel="stylesheet" href="about.css?v=21">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
@@ -188,8 +193,13 @@
 		</div>
 		<article class="content">
 			<h2 class="section-title">Nyheter</h1>
-				<p>??.10.2022</p>
-				- Forbedret måten pokemon lagres og lastes inn på, slik at belastningen på spillet blir mindre.
+				<!--<p>??.10.2022</p>
+				- Forbedret måten pokemon lagres og lastes inn på, slik at belastningen på spillet blir mindre.<br>
+				- La til en fiks for når man bruker frem og tilbake navigasjon.<br>-->
+				<p>06.10.2022</p>
+				- Enda en hotfix! Makan til rotete kode! :P
+				- La til en ny varselboks på forsiden, hvis jeg trenger å gi meldinger til brukerne.
+				- La til to nye tilbakemeldingsbokser på "kontakt-oss" for de som ikke vil sende e-post.
 				<p>03.10.2022</p>
 				- Hotfixet Halloween eventet:<br>
 				- Shadow MewTwo har nå riktig bilde. (OG det oppdaterer seg til riktg, etterhvert) Denne typen fix vil snart være på plass for alle de buggede pokemonene, når jeg omarbeider hvordan de lastes inn. (Så om du har Alolan "Rapidash" så blir dette fikset snart-ish)<br>
@@ -408,8 +418,9 @@
 </div>
 
 	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="global.js?v=11"></script>
+	  <script src="global.js?v=21"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
+	  <script async src="https://api.countapi.xyz/hit/pokemath.online/aboutVisited?callback=cb"></script>
 </body>
 <!-- https://icon-icons.com/users/RoundIcons/icon-sets/ Ikoner laget av RoundIcons 
 Noen bakgrunner er laget av <a href="https://pixabay.com/users/tmstbch-3040875/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1572475">Tommaso Tabacchi</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1572475">Pixabay</a>-->
