--- a/MathGame/customizer.html
+++ b/MathGame/customizer.html
@@ -4,11 +4,16 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css??v=10">
+	<title>Pokémath - Egendefinert</title>
+	<meta name="title" content="Pokémath - Egendefinert">
+	<meta name="description" content="Lag ditt eget nivå.">
+	<meta name="robots" content="noindex, nofollow">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="author" content="Tirco">
+	<link rel="stylesheet" href="globalstyle.css?v=21">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
-	<link rel="stylesheet" href="menustyle.css??v=10">
-	<link rel="stylesheet" href="customizer.css??v=10">
+	<link rel="stylesheet" href="menustyle.css?v=21">
+	<link rel="stylesheet" href="customizer.css?v=21">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
@@ -214,8 +219,9 @@
 	<a id="update-log" class="align-right" href="about.html#news">Nytt</a>
 </div>
 
-<script src="global.js?v=10"></script>
-<script src="customizer.js?v=10"></script>
+<script src="global.js?v=21"></script>
+<script src="customizer.js?v=21"></script>
+<script async src="https://api.countapi.xyz/hit/pokemath.online/customizerVisited?callback=cb"></script>
 </body>
 
 </html>
