--- a/MathGame/index.html
+++ b/MathGame/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <head>
-	<meta charset="utf-8" />
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css?v=9">
-	<link rel="stylesheet" href="menustyle.css?v=9">
+	<link rel="stylesheet" href="globalstyle.css?v=21">
+	<link rel="stylesheet" href="menustyle.css?v=21">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+	<meta name="title" content="Pokemath">
+	<meta name="description" content="En nettside hvor man kan øve på de fire regneartene og få informasjon om ulike pokemon når man løser nok oppgaver.">
+	<meta name="keywords" content="Matte, Pokemon, pokemth, poekmath, mate, pokematte">
+	<meta name="robots" content="index, nofollow">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="language" content="Norwegian">
+	<meta name="revisit-after" content="10 days">
+	<meta name="author" content="Tirco">
 </head>
 <div>
 	<div class="cookie-container" id="cookie-container">
@@ -320,7 +328,6 @@
 	</div>
 </div>
 <div class="botbar">
-	<a href="https://docs.google.com/forms/d/e/1FAIpQLSfPSaP6xBqByUcgBCzj9akRM7vRFeUD0QuWZ2Z0uIyOqJHcPA/viewform?usp=sf_link">Hjelp oss med å bli bedre! Trykk her for å svare på en undersøkelse, og gi oss en tilbakemelding! (Google Forms)</a>
 	<!--<a>Besøkende:</a>
 	<a id="visits">...</a>
 	<script>
@@ -333,19 +340,27 @@
 </div>
 
 
-<div id="alertbox" class="alert simple-alert is-hidden"> <!-- is-hidden if hidden-->
-	<h3>Feilmelding</h3>
-	<p>Dette er en test.</p>
+<div id="alertbox" class="alert simple-alert is-hidden-"> <!-- is-hidden if hidden-->
+	<h3>Feilmeldinger <a class="date">07.10.2022</a></h3>
+	<p>Om du oppdager en feil, eller vil fortelle oss om idèene dine, så kan du finne skjemaer for det <a href="http://pokemath.online/about.html#contact">ved å trykke her</a> eller gå inn på siden for "kontakt oss". 
+	Takk for alle svarene på undersøkelsen vi hadde. Det var nesten 500 av dere som har svart, og kommet med tilbakemeldinger! Nå vet vi hva vi skal jobbe med videre.</p>
+	<h3>Noen spillere får ikke pokemon. <a class="date">07.10.2022</a></h3>
+	<p>Det ble på fredag rapportert at flere spillere fikk fanget pokemon. Dette var fordi pokemath ikke fikk kontakt med den ene tjenesten vi bruker for å hente informasjon om de forskjellige pokemonene. Det jobbes med et alternativ hvor vi ikke vil være avhengig av andre tjenester, men dette vil ta tid for å få på plass.</p>
 	<a class="close" onclick="closeAlert()">&times;</a>
+	<br>
+	<br>
+	<br>
+	- Mvh. PokeMorten
+	<br>
 </div>
 
 
 
 
 	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="global.js?v=9"></script>
+	  <script src="global.js?v=21"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
-	  <script src="menu.js?v=9"></script>
+	  <script src="menu.js?v=21"></script>
 </body>
 
 </html>
