--- a/MathGame/pokemath.html
+++ b/MathGame/pokemath.html
@@ -5,8 +5,13 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css?v=11">
-	<link rel="stylesheet" href="pokemon.css?v=11">
+	<meta name="title" content="Pokémath">
+	<meta name="description" content="Mattesiden!">
+	<meta name="robots" content="noindex, nofollow">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="author" content="Tirco">
+	<link rel="stylesheet" href="globalstyle.css?v=21">
+	<link rel="stylesheet" href="pokemon.css?v=21">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
@@ -171,9 +176,10 @@
 	<a id="update-log" class="align-right" href="about.html#news">Nytt</a>
 </div>
 	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="alternateforms.js?v=11"></script>
-	  <script src="global.js?v=11"></script>
+	  <script src="alternateforms.js?v=21"></script>
+	  <script src="global.js?v=21"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
-	  <script src="math.js?v=11"></script>
-	  <script src="pokestuff.js?v=11"></script>
+	  <script src="math.js?v=21"></script>
+	  <script src="pokestuff.js?v=21"></script>
+	  <script async src="https://api.countapi.xyz/hit/pokemath.online/mathVisited?callback=cb"></script>
 </html>
