--- a/MathGame/pokeviewer.html
+++ b/MathGame/pokeviewer.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <head>
+	<title>Pokémath - Pokéviewer</title>
+	<meta name="title" content="Pokémath - Pokéviewer">
+	<meta name="description" content="Se på dine Pokémon.">
+	<meta name="robots" content="noindex, nofollow">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="author" content="Tirco">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css?v=9">
+	<link rel="stylesheet" href="globalstyle.css?v=21">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
-	<link rel="stylesheet" href="menustyle.css?v=9">
-	<link rel="stylesheet" href="shop.css?v=9">
+	<link rel="stylesheet" href="menustyle.css?v=21">
+	<link rel="stylesheet" href="shop.css?v=21">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
 <body>
@@ -138,8 +143,8 @@
 
 
 	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="global.js?v=9"></script>
-	  <script src="pokeviewer.js?v=9"></script>
+	  <script src="global.js?v=21"></script>
+	  <script src="pokeviewer.js?v=21"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
 </body>
 
