--- a/MathGame/shop.html
+++ b/MathGame/shop.html
@@ -4,11 +4,16 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css?v=9">
+	<title>Pokémath - Butikk</title>
+	<meta name="title" content="Pokémath - Butikk">
+	<meta name="description" content="Butikken til Pokemath hvor man kan kjøpe oppgraderinger.">
+	<meta name="robots" content="noindex, nofollow">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="author" content="Tirco">
+	<link rel="stylesheet" href="globalstyle.css?v=21">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
-	<link rel="stylesheet" href="menustyle.css?v=9">
-	<link rel="stylesheet" href="shop.css?v=9">
+	<link rel="stylesheet" href="menustyle.css?v=21">
+	<link rel="stylesheet" href="shop.css?v=21">
 	<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
@@ -591,9 +596,10 @@
 
 
 	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="global.js?v=9"></script>
-	  <script src="shop.js?v=9"></script>
+	  <script src="global.js?v=21"></script>
+	  <script src="shop.js?v=21"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
+	  <script async src="https://api.countapi.xyz/hit/pokemath.online/shopVisited?callback=cb"></script>
 </body>
 
 </html>
