--- a/MathGame/dex.html
+++ b/MathGame/dex.html
@@ -4,10 +4,15 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css?v=10">
-	<link rel="stylesheet" href="dex.css?v=10">
-	<link rel="stylesheet" href="pokemon.css?v=10">
+	<title>Pokémath - Pokédex</title>
+	<meta name="title" content="Pokémath - Pokedex">
+	<meta name="description" content="Pokedexen til Pokemath hvor man kan se alle pokemonene sine.">
+	<meta name="robots" content="noindex, nofollow">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="author" content="Tirco">
+	<link rel="stylesheet" href="globalstyle.css?v=21">
+	<link rel="stylesheet" href="dex.css?v=21">
+	<link rel="stylesheet" href="pokemon.css?v=21">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
@@ -173,9 +178,10 @@
 	</div>
 
 	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="global.js?v=10"></script>
+	  <script src="global.js?v=21"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
-	  <script src="dex.js?v=10"></script>
+	  <script src="dex.js?v=21"></script>
+	  <script async src="https://api.countapi.xyz/hit/pokemath.online/dexVisited?callback=cb"></script>
 </body>
 
 </html>
