--- a/MathGame/test.html
+++ b/MathGame/test.html
@@ -4,11 +4,16 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css??v=9">
+	<title>Pokémath - Test</title>
+	<meta name="title" content="Pokémath - Test">
+	<meta name="description" content="Ingenting her!">
+	<meta name="robots" content="noindex, nofollow">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="author" content="Tirco">
+	<link rel="stylesheet" href="globalstyle.css?v=21">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
-	<link rel="stylesheet" href="menustyle.css??v=9">
-	<link rel="stylesheet" href="pokemon.css?v=10">
+	<link rel="stylesheet" href="menustyle.css?v=21">
+	<link rel="stylesheet" href="pokemon.css?v=21">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
@@ -149,8 +154,8 @@
 	<a id="update-log" class="align-right" href="about.html#news">Nytt</a>
 </div>
 
-<script src="global.js?v=9"></script>
-<script src="stats.js?v=9"></script>
+<script src="global.js?v=21"></script>
+<script src="stats.js?v=21"></script>
 </body>
 
 </html>
