--- a/MathGame/notfound.html
+++ b/MathGame/notfound.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pokémath - Test</title>
-	<meta name="title" content="Pokémath - Test">
+	<title>Pokémath - Page Not Found</title>
+	<meta name="title" content="Pokémath - Page Not Found">
 	<meta name="description" content="Ingenting her!">
 	<meta name="robots" content="noindex, nofollow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -124,36 +124,12 @@
 		  </div>
 		</form>
 	  </div>
-<div class="main">
-	<div>
-		<a id="N12-1" class="column is-narrow filtered 12-1 #12 gigantamax butterfree bug flying" style="cursor: pointer;" href="images/pokemon/normal/10189.png" target="_blank">
-			<div class="card">
-				<div class="card-content">
-					<div class="has-text-centered card-image">
-						<div class="card-image" style="background-image: url('images/pokemon/normal/10189.png');"></div>
-						<div class="card-id"> #12-1</div>
-						<div id="cardcounter" class="card-counter">x1</div>
-					</div>
-					<div class="card-footer">
-						<p class="card-footer-item">
-							<strong style="text-transform: capitalize;">gigantamax butterfree</strong>
-						</p>
-					</div>
-					<footer class="card-footer">
-						<p class="card-footer-item" style="text-transform: capitalize;">
-							<span class="typecard type-bug">bug</span><span class="typecard type-flying">flying</span>
-						</p>
-					</footer>
-				</div>
-			</div>
-		</a>
-		<!--- Det er \n  \n  mellom blokkene --->
+<div class="main" style="left:50%; right:50%; text-align:center;">
+	<div class="row is-mobile is-multiline">
+		<img src="images/404.png">
+		<div class="">Vi klarte ikke å finne siden du leter etter, så du får se en Wobbuffet istedet.</div><br> 
+		<div>Kanskje du må <a href="http://pokemath.online/">tilbake til startsiden?</a></div>
 	</div>
-	<button onclick="createSaveFile()" class="button-1">Last ned</button>
-	<body onload="init()">
-		<input id="fileInput" type="file" name="file" />
-		<pre id="fileContent"></pre>
-	</body>
 </div>
 
 <div class="botbar">
