--- a/MathGame/pokemath.html
+++ b/MathGame/pokemath.html
@@ -157,6 +157,7 @@
 	
 	<div class="columns is-multiline is-mobile" id="pokedex">
     </div>
+	<a class="button-1" href="./dex.html">Klikk her for å se alle dine pokemon.</a>
 	
 	<div class="overlay">
 		<div class="overlay-inner">
@@ -177,9 +178,11 @@
 </div>
 	  <!--<script src="main.js?v=1"></script>>-->
 	  <script src="alternateforms.js?v=21"></script>
+	  <script src="pokemondata.js?v=21"></script>
 	  <script src="global.js?v=21"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
 	  <script src="math.js?v=21"></script>
 	  <script src="pokestuff.js?v=21"></script>
 	  <script async src="https://api.countapi.xyz/hit/pokemath.online/mathVisited?callback=cb"></script>
+	  <script>loadAmountFromList(5,true)</script>
 </html>
