--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -154,6 +154,7 @@
 			Flere av ikonene er hentet fra:<a href="https://www.flaticon.com/search?word=pokemon&type=icon" title="Flaticon.com"> Roundicons Freebies - Flaticon</a><br>
 			Noen av bakgrunnene er laget av <a href="https://pixabay.com/users/tmstbch-3040875/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1572475">Tommaso Tabacchi</a> fra <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1572475">Pixabay</a></p>
 			Noen av bakgrunnene er laget av <a href="https://pixabay.com/users/incantabiless-17625387/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=5432819">Incantabiless</a> fra <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=5432819">Pixabay</a>
+			<p>Pokémon and all elements of the Pokémon franchise are © 1995-2022 Nintendo, GAME FREAK inc. TM © and Creatures Inc.</p>
 		</article>
 	</section>
 	<section id="contact" class="section">
