--- a/MathGame/dex.html
+++ b/MathGame/dex.html
@@ -180,6 +180,9 @@
 	  <!--<script src="main.js?v=1"></script>>-->
 	  <script src="global.js?v=21"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
+	  <script src="pokemondata.js?v=21"></script>
+	  <script src="alternateforms.js?v=21"></script>
+	  <script src="pokestuff.js?v=21"></script>
 	  <script src="dex.js?v=21"></script>
 	  <script async src="https://api.countapi.xyz/hit/pokemath.online/dexVisited?callback=cb"></script>
 </body>
