--- a/MathGame/stats.html
+++ b/MathGame/stats.html
@@ -128,10 +128,10 @@
 			//FUllstendig klar over at passordet står i klartekst.
 			//Ddet er til for å begrense antall mennesker som laster inn disse tallene. 
 			//Kan du lese koden, er du velkommen til å se på statistikksiden! :) (Bidra gjerne til utviklingen av nettsiden på Github!)
-			var pass1="jegkanlesekode"; 
-			password=prompt('Enter Password',' '); 
-			if (password==pass1) 
-				alert('Correct Password! Click OK to Enter!'); 
+			var pass1="%C2%92%C2%87%5E";
+			password=prompt('Skriv Inn Passord',' '); 
+			if (password==btoa(decodeURI((pass1)))) 
+				alert('Velkommen!'); 
 			else { window.location="http://pokemath.online/"; 
 			}
 		</SCRIPT>
